--- a/index.html
+++ b/index.html
@@ -5,9 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>onsenAI</title>
     <!-- Add any additional meta tags or link to stylesheets here -->
+    <style>
+        /* Ensure the body and html take up the full height */
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        /* Ensure the container for the widget takes up the full height and width */
+        #oneai-widget-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
+    <!-- Script to load the OneAI snippet -->
+    <script id="oneai-snippet" src="https://oneai.com/~widget?id=onsen"></script>
 </head>
-<script id="oneai-snippet" src="https://oneai.com/~widget?id=onsen"></script>
 <body>
-    <!-- Your content goes here -->
+    <!-- Container for the OneAI widget -->
+    <div id="oneai-widget-container"></div>
 </body>
 </html>
