--- a/index.html
+++ b/index.html
@@ -1,34 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>onsenAI</title>
-    <!-- Add any additional meta tags or link to stylesheets here -->
-    <style>
-        /* Ensure the body and html take up the full height */
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            overflow: hidden;
-        }
-
-        /* Ensure the container for the widget takes up the full height and width */
-        #oneai-widget-container {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            width: 100%;
-        }
-    </style>
-    <!-- Script to load the OneAI snippet -->
-    <script id="oneai-snippet" src="https://oneai.com/~widget?id=onsen"></script>
-</head>
-<body>
-    <!-- Container for the OneAI widget -->
-    <div id="oneai-widget-container"></div>
-</body>
-</html>
+<iframe 
+  src="https://widget.yourgpt.ai/9a10f734-2721-42ae-af0b-49831cb83a86" 
+  width="100%" 
+  height="100%">
+</iframe>
