--- a/index.html
+++ b/index.html
@@ -1,5 +1,1 @@
-<iframe 
-  src="https://widget.yourgpt.ai/9a10f734-2721-42ae-af0b-49831cb83a86" 
-  width="90%" 
-  height="90%">
-</iframe>
+<iframe style="border:16px #040e1f hidden" src="https://oneai.com/~onsen" title="iFrame" width="100%" height="1000px" scrolling="no" frameborder="yes" allow="fullscreen"></iframe>
