--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe style="border:16px #040e1f hidden" src="https://oneai.com/~onsen" title="iFrame" width="100%" height="1000px" scrolling="no" frameborder="yes" allow="fullscreen"></iframe>
+<iframe style="border:1px #040e1f solid" src="https://oneai.com/~onsen" title="iFrame" width="130%" height="1000px" scrolling="no" frameborder="yes" allow="fullscreen"></iframe>
